.python_history
from mpesa_app import register_urls, simulate_c2b
python3 mpesa_app.py
from mpesa_app import register_urls, simulate_c2b
register_urlshttp://127.0.0.1:404
register_urls ("http://127.0.0.1:404")
register_urls(" File "/data/data/com.termux/files/usr/lib/python3.12/site-packages/requests/models.py", line 980, in json
    raise RequestsJSONDecodeError(e.msg, e.doc, e.pos)
requests.exceptions.JSONDecodeError: Expecting value: line 1 column 1 (char 0)
register_urls("IndentationError: unexpected indent
>>> requests.exceptions.JSONDecodeError: Expecting value: line 1 column 1 (char 0)
  File "<stdin>", line 1
    requests.exceptions.JSONDecodeError: Expecting value: line 1 column 1 (char 0)
                                                   ^^^^^
SyntaxError: invalid syntax
from mpesa_app import register_urls("http://localhost:5000")
from mpesa_app import register_urls
register_urls("http://localhost:5000")
import requests
response = requests.post(url, headers=headers, json=payload)
print("Status:", response.status_code)
print("Text:", response.text)
from mpesa_app import register_urls
import requests
response = requests.get("https://sandbox.safaricom.co.ke/")  # example test
print("Status:", response.status_code)
print("Text:", response.text)
from mpesa_app import register_urls
from mpesa_app import simulate_c2b
from mpesa_app import register_urls, simulate_c2b
# paste the link from Session 2 inside the quotes:
register_urls("https://green-sheep-123.trycloudflare.com")
simulate_c2b()from mpesa_app import register_urls, simulate_c2b
# paste the link from Session 2 inside the quotes:
register_urls("https://green-sheep-123.trycloudflare.com")
from mpesa_app import register_urls,
 from mpesa_app import register_urls,simulate_c2b 
from mpesa_app import register_urls,
from mpesa_app import register_urls
from mpesa_app import register_urls, simulate_c2b
register_urls("https://<your-cloudflare-link>")
simulate_c2b()from mpesa_app import register_urls, simulate_c2b
register_urls("https://<your-cloudflare-link>")
from mpesa_app import register_urls, simulate_c2b
# Register callback URLs
register_urls("https://nelson-optical-only-beta.trycloudflare.com")
# Simulate a test C2B transaction
import requests
from requests.auth import HTTPBasicAuth
consumer_key = "IJbHP70UyXidTKyYdIqUC8E52CrFIcrr1DDGvmL9BKGhfKt2"
consumer_secret = "ZcUwSvLaLKH51GO3Jqa4bwY5URfZBkd3Tioo2e4erBG9vslOGRQUf1QrmfAuDCqU"
def get_access_token():
    url = "https://sandbox.safaricom.co.ke/oauth/v1/generate?grant_type=client_credentials"
    response = requests.get(url, auth=HTTPBasicAuth(consumer_key, consumer_secret))
    token = response.json()["access_token"]
    return token
if __name__ == "__main__":
    token = get_access_token()
    print("Your Access Token:", token)
import yagmail
print("✅ Yagmail is installed correctly")python test_email.py
pip install --upgrade pip
